tests/src/frontend/syntax/invalid/name_collision_2.sk
fun foo(): void {
  void
}
const foo: Int = 0;
